--- a/TrySelectMany/TrySelectMany.csproj
+++ b/TrySelectMany/TrySelectMany.csproj
@@ -31,6 +31,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Core\SelectManyEnumerable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Core\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
